--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"
     {% block head %}{% endblock %} <!-- This is Flask templating basically outline where we'll insert our own code from each page -->
 </head>
 <body>
