--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,35 @@
 
 <!-- Now anything in these blocks will be inserted into the template from base.html. This is template inheritance-->
 {% block head %}
-
+<title>Task Master</title>
 {% endblock %}
 
 {% block body %}
-<h1>Template</h1>
+<div class="content">
+    <h1>Task Master</h1>
+
+    <table>
+        <tr>
+            <th>Task</th>
+            <th>Added</th>
+            <th>Actions</th>
+        </tr>
+        {% for task in tasks %}
+            <tr>
+                <td>{{ task.content }}</td>
+                <td>{{ task.date_created.date() }}</td>
+                <td>
+                    <a href="">Delete</a>
+                    <br>
+                    <a href="">Update</a>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
+
+    <form action="/"  method="POST">
+        <input type="text" name="content"" id="content">
+        <input type="submit" value="Add Task">
+    </form>
+</div>
 {% endblock %}
