--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 <div class="content">
-    <h1>Task Master</h1>
+    <h1 style="text-align: center">Task Master</h1>
 
     <table>
         <tr>
@@ -20,7 +20,7 @@
                 <td>{{ task.content }}</td>
                 <td>{{ task.date_created.date() }}</td>
                 <td>
-                    <a href="">Delete</a>
+                    <a href="/delete/{{ task.id }}">Delete</a>
                     <br>
                     <a href="">Update</a>
                 </td>
