--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@
 <div class="content">
     <h1 style="text-align: center">Task Master</h1>
 
+    {% if tasks|length < 1 %}
+    <h4 style="text-align: center">There are no tasks. Create one below!</h4>
+    {% else %}
+
     <table>
         <tr>
             <th>Task</th>
@@ -27,6 +31,8 @@
             </tr>
         {% endfor %}
     </table>
+
+    {% endif %}
 
     <form action="/"  method="POST">
         <input type="text" name="content"" id="content">
